@@ -37,7 +37,8 @@ Added support for using variables in `sizeof`, including dereferencing
 Added support for string literals in `sizeof`
 Added support for variables in loop bodies
 Added `__M2C__`, `__M2C_MINOR__`, and `__M2C_PATCHLEVEL__` defines. These will contain the major, minor, and patch version as integers.
-Added support for intializer lists for global integer arrays
+Added support for initializer lists for global integer arrays
+Added support for global arrays without explicit size when initializer lists are used
 
 ** Fixed
 Fixed recursive dot operators segfaulting.
